Bug 1515873 - Don't create a backend as part of cleanup. r=jib

There's no guarantee a backend exists when a MediaManager does, and
crash-stats shows that shutdown can occur between posting a task and running
it, making it illegal to create a backend anew.

We're safer off avoiding creating a new backend. The cleanup step we're trying
to do is only effective if a backend already exists anyway.

Differential Revision: https://phabricator.services.mozilla.com/D15631

--HG--
extra : moz-landing-system : lando